load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "tef_lib",
    srcs = ["main.go"],
    importpath = "github.com/cockroachdb/cockroach/pkg/cmd/tef",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/cmd/tef/cli",
        "//pkg/cmd/tef/planners/inmemory",
    ],
)

go_binary(
    name = "tef-light",
    embed = [":tef_lib"],
    visibility = ["//visibility:public"],
)
