load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "running_lib",
    srcs = ["read_datadog.go"],
    importpath = "github.com/cockroachdb/cockroach/pkg/cmd/drtprod/running",
    visibility = ["//visibility:private"],
    deps = ["@com_github_datadog_datadog_api_client_go_v2//api/datadog"],
)

go_binary(
    name = "running",
    embed = [":running_lib"],
    visibility = ["//visibility:public"],
)
