load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "inmemory",
    srcs = [
        "executor.go",
        "factory.go",
        "manager.go",
        "storage.go",
    ],
    importpath = "github.com/cockroachdb/cockroach/pkg/cmd/tef/planners/inmemory",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/cmd/tef/planners",
        "@com_github_cockroachdb_errors//:errors",
        "@com_github_spf13_cobra//:cobra",
    ],
)
