load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "pua",
    srcs = [
        "baseline.go",
        "certs_setup.go",
        "cleanup.go",
        "cluster_setup.go",
        "data_import.go",
        "disk_stalls.go",
        "network_failures.go",
        "node_restarts.go",
        "ops_stress.go",
        "plan.go",
        "workload_setup.go",
        "zone_outages.go",
    ],
    importpath = "github.com/cockroachdb/cockroach/pkg/cmd/tef/plans/pua",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/cmd/tef/planners",
        "@com_github_spf13_cobra//:cobra",
    ],
)
