load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "ui",
    srcs = [
        "embed.go",
        "workflow.go",
    ],
    embedsrcs = ["workflow.html"],
    importpath = "github.com/cockroachdb/cockroach/pkg/cmd/tef/api/handlers/ui",
    visibility = ["//visibility:public"],
    deps = ["//pkg/cmd/tef/api/types"],
)
