load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "v1",
    srcs = ["plans.go"],
    importpath = "github.com/cockroachdb/cockroach/pkg/cmd/tef/server/handlers/v1",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/cmd/tef/planners",
        "//pkg/cmd/tef/server/types",
        "@com_github_gorilla_mux//:mux",
    ],
)

go_library(
    name = "handlers",
    srcs = ["plans.go"],
    importpath = "github.com/cockroachdb/cockroach/pkg/cmd/tef/api/handlers/v1",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/cmd/tef/api/middleware",
        "//pkg/cmd/tef/api/types",
        "//pkg/cmd/tef/planners",
        "@com_github_gorilla_mux//:mux",
    ],
)

go_test(
    name = "handlers_test",
    srcs = ["plans_test.go"],
    embed = [":handlers"],
    deps = ["@com_github_stretchr_testify//require"],
)
